--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "webcrawler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "nodemon": "^2.0.15",
-    "url-content": "^1.0.6"
-  }
+    "name": "webcrawler",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha",
+        "start": "nodemon index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "nodemon": "^2.0.15",
+        "url-content": "^1.0.6"
+    },
+    "devDependencies": {
+        "mocha": "^9.2.0"
+    }
 }
