--- a/package.json
+++ b/package.json
@@ -4,33 +4,36 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "nodemon index.ts",
-      "test": "jest"
+        "dev": "nodemon index.ts",
+        "start": "node index.ts",
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "nodemon": "^2.0.15",
-        "url-content": "^1.0.6",
         "@types/jest": "^29.1.2",
         "cors": "^2.8.4",
         "dotenv": "^16.0.1",
-        "ts-node": "^10.9.1"
+        "node-fetch": "^2.6.9",
+        "nodemon": "^2.0.15",
+        "ts-node": "^10.9.1",
+        "url-content": "^1.0.6"
     },
     "devDependencies": {
-      "@babel/core": "^7.19.3",
-      "@babel/preset-env": "^7.19.3",
-      "@babel/preset-typescript": "^7.18.6",
-      "@types/cors": "^2.8.12",
-      "@types/node": "^18.8.3",
-      "@types/nodemailer": "^6.4.6",
-      "@typescript-eslint/eslint-plugin": "^5.40.1",
-      "@typescript-eslint/parser": "^5.39.0",
-      "babel-jest": "^29.1.2",
-      "eslint": "^8.25.0",
-      "jest": "^29.1.2",
-      "standard": "^11.0.1",
-      "ts-jest": "^29.0.3",
-      "typescript": "^4.8.4"
+        "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.19.3",
+        "@babel/preset-typescript": "^7.18.6",
+        "@types/cors": "^2.8.12",
+        "@types/node": "^18.8.3",
+        "@types/node-fetch": "^2.6.2",
+        "@types/nodemailer": "^6.4.6",
+        "@typescript-eslint/eslint-plugin": "^5.40.1",
+        "@typescript-eslint/parser": "^5.39.0",
+        "babel-jest": "^29.1.2",
+        "eslint": "^8.25.0",
+        "jest": "^29.1.2",
+        "standard": "^11.0.1",
+        "ts-jest": "^29.0.3",
+        "typescript": "^4.8.4"
     }
 }
